<resources>
    <string name="app_name">TechSeeker</string>
    <string name="applicationHeaderSlogan">IT is Our Duty</string>
    <string name="applicationHeaderTitle">TechSeeker</string>
    <string name="proceedingButton">Start the Quiz</string>
    <string name="applicationDescription">Looking to buy a new PC or Laptop, but don\'t know where to start? Well, you have come to the right place!</string>
    <string name="applicationLogoDescription">TechSeeker Logo</string>
    <string name="questionTitle">Question 1</string>
    <string name="nextQuestionText">Next Question</string>
    <string name="firstQuestionContent">Do you want a PC or a Laptop? Please select one of the following:</string>
    <string name="laptopChoice">Laptop</string>
    <string name="desktopChoice">PC (Desktop)</string>
    <string name="secondQuestionTitle">Question 2</string>
    <string name="secondQuestionContent">For what purpose will you be using this computer? Please select one of the following:</string>
    <string name="title_activity_result">ResultActivity</string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="thirdQuestionContent">What is the budget for this computer?</string>
    <string name="thirdQuestionTitle">Question 3</string>
    <string name="minimumPriceText">Minimum Price</string>
    <string name="maximumPriceText">Maximum Price</string>
    <string name="resultButtonText">Find Result</string>
    <string name="minimumPriceHint">Enter a minimum price.</string>
    <string name="maximumPriceHint">Enter a maximum price.</string>
    <string name="resultLabelText">Your Final Result</string>
    <string name="applicationTitle">TechSeeker</string>
    <string name="applicationSlogan">IT is Our Duty</string>
    <string name="laptopImageDescription">Laptop Image</string>
    <string name="pcImageDescription">PC Description</string>
    <string name="hardware_information">Hardware Information</string>
    <string name="all_laptops_menu_title">All Laptops</string>
    <string name="all_pcs_menu_title">All PCs</string>
    <string name="other_preferences">Other Preferences</string>
    <string name="settings_menu_title">Settings</string>
    <string name="about_menu_title">About</string>
    <string name="favourites_menu_title">Favourites</string>
    <string name="feedback_menu_title">Feedback</string>
    <string name="share_menu_title">Share</string>
    <string name="help_menu_title">Help</string>
    <string name="techseeker_application_logo">TechSeeker Logo</string>
    <string name="low_powered_work">Low-Powered Work</string>
    <string name="medium_powered_work">Medium-Powered Work</string>
    <string name="high_powered_work">High-Powered Work</string>
    <string name="mediumDescription">Casual gaming and photo-editing</string>
    <string name="lowDescription">Text-editing, web browsing and coding</string>
    <string name="highDescription">Harcore gaming, video-editing and streaming</string>
    <string name="experience_rating">How would rate your experience with us?</string>
    <string name="about_title">About Us</string>
    <string name="feedback_title">Feedback</string>
    <string name="productResultQuestion">Are you happy with the product we suggested for you?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="recommendation_text">If you have any recommendations to ameliorate our application, please comment them down below:</string>
    <string name="suggestion_hint">Enter a suggestion</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="mission_title">Our Mission</string>
    <string name="mission_description">Our mission is to help people pick or inform themselves about the variety of computer and laptop options out on the current market.</string>
    <string name="developers_title">Our Developers</string>
    <string name="developer_info1">Gia-Minh Doan - [TeddyBatman] (https://github.com/teddybatman)</string>
    <string name="developer_info2">Marissa Gonçalves - [Marissa1999] (https://github.com/Marissa1999)</string>
    <string name="developer_info3">Amy Yip - [aexmy] (https://github.com/aexmy)</string>
    <string name="contact_us_title">Contact Us</string>
    <string name="contact_us_button">Contact Us</string>
    <string name="email_hint">Enter your email address</string>
    <string name="contactus_hint">Send us a message!</string>
    <string name="favourites_title">My Favourites</string>
    <string name="button_specs">Specs</string>
    <string name="settings_title">Settings</string>
    <string name="share_title">Share</string>
    <string name="share_info">Liked our application? Feel free to share it with your friends and family!</string>
    <string name="share_text_with">Share this text with:</string>
    <string name="help_title">Help</string>
    <string name="title_activity_favourites">Favourites</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="desktop_navigation_title">Desktop PCs</string>
    <string name="laptop_navigation_title">Laptop Computers</string>
    <string name="title_activity_all_laptops">All Laptops</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_all_pcs">All PCs</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_share">Share</string>
    <string name="officeDescription">Text-Editing, Web Browsing and Coding</string>
    <string name="casualGamingDescription">Casual Gaming</string>
    <string name="photoEditingDescription">Photo-Editing</string>
    <string name="hardcoreGamingDescription">Hardcore Gaming</string>
    <string name="videoEditingDescription">Video-Editing</string>
    <string name="budgetLabel">Budget</string>
    <string name="title_activity_settings">Settings</string>
    <string name="maximumBudgetLabel">Maximum Budget</string>
    <string name="minimumBudgetLabel">Minimum Budget</string>
    <string name="play_button_text">Play</string>
    <string name="retry_quiz_menu_title">Retry Quiz</string>
    <string name="home_menu_title">Home</string>
    <string name="resultImage">Computer Image</string>
</resources>
