<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="#9900BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/aboutUsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/about_title"
        android:textColor="#1A237E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/our_mission_subtitle"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/our_mission_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/mission_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/mission_info"
        app:layout_constraintTop_toBottomOf="@+id/aboutUsTitle" />

    <TextView
        android:id="@+id/our_developers_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/developers_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/developers_info1"
        app:layout_constraintTop_toBottomOf="@+id/mission_info" />

    <TextView
        android:id="@+id/mission_info"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:gravity="center_horizontal|top"
        android:hapticFeedbackEnabled="false"
        android:text="@string/mission_description"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/our_mission_subtitle" />

    <TextView
        android:id="@+id/developers_info1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/developer_info1"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/our_developers_title" />

    <TextView
        android:id="@+id/developers_info2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/developer_info2"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/developers_info1"
        app:layout_constraintStart_toStartOf="@+id/developers_info1"
        app:layout_constraintTop_toBottomOf="@+id/developers_info1" />

    <TextView
        android:id="@+id/developers_info3"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/developer_info3"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/developers_info2"
        app:layout_constraintStart_toStartOf="@+id/developers_info2"
        app:layout_constraintTop_toBottomOf="@+id/developers_info2" />

    <TextView
        android:id="@+id/background_contact"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:background="#9900BCD4"
        app:layout_constraintBottom_toTopOf="@+id/submitContactButton"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@+id/emailAddress"
        app:layout_constraintTop_toTopOf="@+id/emailAddress"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/contact_us_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:text="@string/contact_us_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/developers_info3"
        app:layout_constraintTop_toBottomOf="@+id/developers_info3" />

    <EditText
        android:id="@+id/contactUsEditText"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/contactus_hint"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="@+id/emailAddress"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress" />

    <Button
        android:id="@+id/submitContactButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="launchContactUsButton"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/contact_us_button"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="@+id/background"
        app:layout_constraintEnd_toEndOf="@+id/contactUsEditText"
        app:layout_constraintHorizontal_bias="0.463"
        app:layout_constraintStart_toStartOf="@+id/contactUsEditText"
        app:layout_constraintTop_toBottomOf="@+id/contactUsEditText"
        app:layout_constraintVertical_bias="0.88" />

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/developers_info3"
        app:layout_constraintStart_toStartOf="@+id/contact_us_title"
        app:layout_constraintTop_toBottomOf="@+id/contact_us_title" />

</android.support.constraint.ConstraintLayout>