<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondQuestionActivity">

    <TextView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="#9900BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/secondQuestionContent"
        android:layout_width="350dp"
        android:layout_height="149dp"
        android:layout_marginTop="112dp"
        android:background="#00BCD4"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/secondQuestionContent"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/secondQuestionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/secondQuestionTitle"
        android:textColor="#1A237E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/secondQuestionContent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <Button
        android:id="@+id/secondQuestionButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="225dp"
        android:layout_height="61dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="36dp"
        android:background="@color/colorPrimary"
        android:onClick="launchThirdQuestionActivity"
        android:text="@string/nextQuestionText"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/purposeSelection"
        android:layout_width="356dp"
        android:layout_height="255dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/secondQuestionButton"
        app:layout_constraintEnd_toEndOf="@+id/background"
        app:layout_constraintStart_toStartOf="@+id/background"
        app:layout_constraintTop_toBottomOf="@+id/secondQuestionContent">

        <RadioButton
            android:id="@+id/officeWorkRadioButton"
            style="@android:style/Widget.CompoundButton.RadioButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/officeDescription"
            android:textColorLink="@color/design_default_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/casualGamingRadioButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/casualGamingDescription"
            android:textColorLink="@color/design_default_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/photoEditingRadioButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/photoEditingDescription"
            android:textColorLink="@color/design_default_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/hardcoreGamingRadioButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/hardcoreGamingDescription"
            android:textColorLink="@color/design_default_color_primary"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/videoEditingRadioButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/videoEditingDescription"
            android:textColorLink="@color/design_default_color_primary"
            android:textSize="18sp" />

    </RadioGroup>

</android.support.constraint.ConstraintLayout>

