<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity">

    <TextView
        android:id="@+id/background"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="12dp"
        android:background="#9900BCD4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/feedbackTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:gravity="center"
        android:hapticFeedbackEnabled="false"
        android:text="@string/feedback_title"
        android:textColor="#1A237E"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/experienceRatingQuestion"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <TextView
        android:id="@+id/experienceRatingQuestion"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="80dp"
        android:background="#00BCD4"
        android:gravity="center_horizontal|top"
        android:hapticFeedbackEnabled="false"
        android:text="@string/experience_rating"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/background" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/experienceRatingQuestion"
        app:layout_constraintEnd_toEndOf="@+id/experienceRatingQuestion"
        app:layout_constraintStart_toStartOf="@+id/experienceRatingQuestion"
        app:layout_constraintTop_toTopOf="@+id/experienceRatingQuestion" />

    <TextView
        android:id="@+id/productResultQuestion"
        android:layout_width="350dp"
        android:layout_height="90dp"
        android:layout_marginTop="16dp"
        android:background="#00BCD4"
        android:gravity="center_horizontal|top"
        android:hapticFeedbackEnabled="false"
        android:text="@string/productResultQuestion"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/experienceRatingQuestion" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/productResultQuestion"
        app:layout_constraintEnd_toEndOf="@+id/productResultQuestion"
        app:layout_constraintStart_toStartOf="@+id/productResultQuestion"
        app:layout_constraintTop_toTopOf="@+id/productResultQuestion">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yes" />

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no" />
    </RadioGroup>

    <TextView
        android:id="@+id/suggestionBox"
        android:layout_width="350dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:background="#00BCD4"
        android:gravity="center_horizontal|top"
        android:hapticFeedbackEnabled="false"
        android:text="@string/recommendation_text"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productResultQuestion" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/suggestion_hint"
        android:inputType="textMultiLine"
        app:layout_constraintBottom_toBottomOf="@+id/suggestionBox"
        app:layout_constraintEnd_toEndOf="@+id/suggestionBox"
        app:layout_constraintStart_toStartOf="@+id/suggestionBox"
        app:layout_constraintTop_toTopOf="@+id/suggestionBox" />

    <Button
        android:id="@+id/submitFeedbackButton"
        style="@style/Widget.AppCompat.Button.Colored"
        android:onClick="launchFeedbackButton"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit_feedback"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suggestionBox" />

</android.support.constraint.ConstraintLayout>